logs/enre.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/enre'...
Listing './lib/python3.5/site-packages/enre/db'...
Compiling './lib/python3.5/site-packages/enre/db/models.py'...
***   File "./lib/python3.5/site-packages/enre/db/models.py", line 162
    print 'Create system account'
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/enre/erp'...
Listing './lib/python3.5/site-packages/enre/erp/accounting'...
Listing './lib/python3.5/site-packages/enre/erp/accounting/fixtures'...
Listing './lib/python3.5/site-packages/enre/erp/accounting/locale'...
Listing './lib/python3.5/site-packages/enre/erp/accounting/locale/en'...
Listing './lib/python3.5/site-packages/enre/erp/accounting/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enre/erp/accounting/locale/ru'...
Listing './lib/python3.5/site-packages/enre/erp/accounting/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enre/erp/accounting/templates'...
Listing './lib/python3.5/site-packages/enre/erp/accounting/templates/enre'...
Listing './lib/python3.5/site-packages/enre/erp/accounting/templates/enre/erp'...
Listing './lib/python3.5/site-packages/enre/erp/accounting/templates/enre/erp/accounting'...
Listing './lib/python3.5/site-packages/enre/erp/accounting/templatetags'...
Listing './lib/python3.5/site-packages/enre/erp/core'...
Listing './lib/python3.5/site-packages/enre/erp/core/fixtures'...
Listing './lib/python3.5/site-packages/enre/erp/core/locale'...
Listing './lib/python3.5/site-packages/enre/erp/core/locale/en'...
Listing './lib/python3.5/site-packages/enre/erp/core/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enre/erp/core/locale/ru'...
Listing './lib/python3.5/site-packages/enre/erp/core/locale/ru/LC_MESSAGES'...
Compiling './lib/python3.5/site-packages/enre/erp/core/models.py'...
***   File "./lib/python3.5/site-packages/enre/erp/core/models.py", line 38
    except DatabaseError, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enre/erp/core/static'...
Listing './lib/python3.5/site-packages/enre/erp/core/static/enre'...
Listing './lib/python3.5/site-packages/enre/erp/core/static/enre/erp'...
Listing './lib/python3.5/site-packages/enre/erp/core/static/enre/erp/core'...
Listing './lib/python3.5/site-packages/enre/erp/core/templates'...
Listing './lib/python3.5/site-packages/enre/erp/core/templates/enre'...
Listing './lib/python3.5/site-packages/enre/erp/core/templates/enre/erp'...
Listing './lib/python3.5/site-packages/enre/erp/core/templates/enre/erp/core'...
Listing './lib/python3.5/site-packages/enre/erp/party'...
Listing './lib/python3.5/site-packages/enre/erp/party/fixtures'...
Listing './lib/python3.5/site-packages/enre/erp/party/locale'...
Listing './lib/python3.5/site-packages/enre/erp/party/locale/en'...
Listing './lib/python3.5/site-packages/enre/erp/party/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enre/erp/party/locale/ru'...
Listing './lib/python3.5/site-packages/enre/erp/party/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enre/erp/party/templates'...
Listing './lib/python3.5/site-packages/enre/erp/party/templates/enre'...
Listing './lib/python3.5/site-packages/enre/erp/party/templates/enre/erp'...
Listing './lib/python3.5/site-packages/enre/erp/party/templates/enre/erp/party'...
Listing './lib/python3.5/site-packages/enre/erp/party/templatetags'...
Listing './lib/python3.5/site-packages/enre/erp/product'...
Listing './lib/python3.5/site-packages/enre/erp/product/templates'...
Listing './lib/python3.5/site-packages/enre/erp/product/templates/enre'...
Listing './lib/python3.5/site-packages/enre/erp/product/templates/enre/erp'...
Listing './lib/python3.5/site-packages/enre/erp/product/templates/enre/erp/product'...
Listing './lib/python3.5/site-packages/enre/geo'...
Listing './lib/python3.5/site-packages/enre/geo/fixtures'...
Listing './lib/python3.5/site-packages/enre/geo/locale'...
Listing './lib/python3.5/site-packages/enre/geo/locale/en'...
Listing './lib/python3.5/site-packages/enre/geo/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enre/geo/locale/ru'...
Listing './lib/python3.5/site-packages/enre/geo/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enre/geo/static'...
Listing './lib/python3.5/site-packages/enre/geo/static/enre'...
Listing './lib/python3.5/site-packages/enre/geo/static/enre/geo'...
Listing './lib/python3.5/site-packages/enre/geo/static/enre/geo/flags'...
Listing './lib/python3.5/site-packages/enre/geo/templates'...
Listing './lib/python3.5/site-packages/enre/geo/templates/enre'...
Listing './lib/python3.5/site-packages/enre/geo/templates/enre/geo'...
Listing './lib/python3.5/site-packages/enre/qx'...
Compiling './lib/python3.5/site-packages/enre/qx/rpc.py'...
***   File "./lib/python3.5/site-packages/enre/qx/rpc.py", line 58
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enre/qx/static'...
Listing './lib/python3.5/site-packages/enre/qx/static/enre'...
Listing './lib/python3.5/site-packages/enre/qx/static/enre/qx'...
Listing './lib/python3.5/site-packages/enre/qx/static/enre/qx/resource'...
Listing './lib/python3.5/site-packages/enre/qx/static/enre/qx/resource/qx'...
Listing './lib/python3.5/site-packages/enre/qx/static/enre/qx/theme'...
Compiling './lib/python3.5/site-packages/enre/qx/stores.py'...
***   File "./lib/python3.5/site-packages/enre/qx/stores.py", line 37
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enre/qx/templates'...
Listing './lib/python3.5/site-packages/enre/qx/templates/enre'...
Listing './lib/python3.5/site-packages/enre/qx/templates/enre/qx'...
Listing './lib/python3.5/site-packages/enre/qx/templatetags'...
Compiling './lib/python3.5/site-packages/enre/qx/views.py'...
***   File "./lib/python3.5/site-packages/enre/qx/views.py", line 31
    except RpcDispatcherError, ex:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enre/serve'...
Listing './lib/python3.5/site-packages/enre/serve/management'...
Listing './lib/python3.5/site-packages/enre/serve/management/commands'...
Compiling './lib/python3.5/site-packages/enre/serve/management/commands/serve.py'...
***   File "./lib/python3.5/site-packages/enre/serve/management/commands/serve.py", line 49
    print 'Collect static'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/enre/services'...
Compiling './lib/python3.5/site-packages/enre/services/service.py'...
***   File "./lib/python3.5/site-packages/enre/services/service.py", line 25
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enre/views'...
Listing './lib/python3.5/site-packages/enre/views/templatetags'...
Compiling './lib/python3.5/site-packages/enre/views/utils.py'...
***   File "./lib/python3.5/site-packages/enre/views/utils.py", line 29
    except ImportError, ex:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enre-0.3.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
